--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -9,10 +9,10 @@
       <div fxFlex="40" fxFlexOffset="20px">
         <h4>Links</h4>
         <mat-list>
-          <mat-list-item><a mat-button>Home</a></mat-list-item>
-          <mat-list-item><a mat-button>About</a></mat-list-item>
-          <mat-list-item><a mat-button>Menu</a></mat-list-item>
-          <mat-list-item><a mat-button>Contact</a></mat-list-item>
+          <mat-list-item><a mat-button [routerLink]="['/home']" routerLinkActive="router-link-active" >Home</a></mat-list-item>
+          <mat-list-item><a mat-button [routerLink]="['/about']" routerLinkActive="router-link-active" >About</a></mat-list-item>
+          <mat-list-item><a mat-button [routerLink]="['/menu']" routerLinkActive="router-link-active" >Menu</a></mat-list-item>
+          <mat-list-item><a mat-button [routerLink]="['/contact']" routerLinkActive="router-link-active" >Contact</a></mat-list-item>
         </mat-list>
       </div>
       <div fxFlex="55">
