--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -56,13 +56,18 @@
 
   <div fxFlex>
     <h2>Corporate Leadership</h2>
-    <mat-list *ngFor="let leader of leaders">
-      <img fxFlex matListItemAvatar height="45px" src={{leader.image}} alt={{leader.name}}>
-      <mat-list-item fxFlex matListItemLine>
-        <span matLine>{{leader.name}} {{leader.abbr}}</span>
-        <span matLine>{{leader.designation}}</span>
-        <p matLine>{{leader.description}}</p>
-      </mat-list-item>
-    </mat-list>
+    <div *ngIf="leaders">
+      <mat-list *ngFor="let leader of leaders">
+        <img fxFlex matListItemAvatar height="45px" src={{leader.image}} alt={{leader.name}}>
+        <mat-list-item fxFlex matListItemLine>
+          <span matLine>{{leader.name}} {{leader.abbr}}</span>
+          <span matLine>{{leader.designation}}</span>
+          <p matLine>{{leader.description}}</p>
+        </mat-list-item>
+      </mat-list>
+    </div>
+    <div [hidden]="leaders">
+      <mat-spinner></mat-spinner><h4>Loading... Please Wait</h4>
+    </div>
   </div>
 </div>
