--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -6,8 +6,8 @@
     fxLayoutGap="10px" 
     fxLayoutGap.xs="0">
 
-  <div fxFlex="40">
-    <mat-card *ngIf="dish">
+  <div fxFlex="40" *ngIf="dish">
+    <mat-card >
       <mat-card-header>
         <mat-card-title>
           <h3>{{dish.name | uppercase }}</h3>
@@ -18,9 +18,12 @@
         <p>{{dish.description}}</p>
       </mat-card-content>
       <mat-card-actions>
+        <button mat-button [routerLink]="['/dishdetail', prev]" class="fa fa-chevron-left fa-lg"></button>
         <button mat-button (click)="goBack()">BACK</button>
         <button mat-button>LIKE</button>
         <button mat-button>SHARE</button>
+        <span class="flex-spacer"></span>
+        <button mat-button [routerLink]="['/dishdetail', next]" class="fa fa-chevron-right fa-lg"></button>
       </mat-card-actions>
     </mat-card>
     <div fxFlex [hidden]="dish">
@@ -28,8 +31,8 @@
     </div>
   </div>
 
-  <div fxFlex="40">
-    <div *ngIf="dish"> 
+  <div fxFlex="40" *ngIf="dish">
+    <div> 
       <div>
         <h3>Comments</h3>
         <br>
