--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -42,28 +42,28 @@
       <p>
         <mat-form-field class="half-width">
           <input matInput formControlName="firstname" type="text" placeholder="First Name" required>
-          <mat-error *ngIf="feedbackForm.get('firstname').hasError('required') && feedbackForm.get('firstname').touched">
-            First Name is Required
+          <mat-error *ngIf="formErrors.firstname">
+            {{formErrors.firstname}}
           </mat-error>
         </mat-form-field>
         <mat-form-field class="half-width">
           <input matInput formControlName="lastname" type="text" placeholder="Last Name" required>
-          <mat-error *ngIf="feedbackForm.get('lastname').hasError('required') && feedbackForm.get('lastname').touched">
-            Last Name is Required
+          <mat-error *ngIf="formErrors.lastname">
+            {{formErrors.lastname}}
           </mat-error>
         </mat-form-field>
       </p>
       <p>
         <mat-form-field class="half-width">
-          <input matInput formControlName="telnum" type="tel" placeholder="Tel. Num" required>
-          <mat-error *ngIf="feedbackForm.get('telnum').hasError('required') && feedbackForm.get('telnum').touched">
-            Tel. Number is Required
+          <input matInput formControlName="telnum" type="tel" placeholder="Tel. Num" pattern="[0-9]*" required>
+          <mat-error *ngIf="formErrors.telnum">
+            {{formErrors.telnum}}
           </mat-error>
         </mat-form-field>
         <mat-form-field class="half-width">
-          <input matInput formControlName="email" type="email" placeholder="Email" required>
-          <mat-error *ngIf="feedbackForm.get('email').hasError('required') && feedbackForm.get('email').touched">
-            Email is Required
+          <input matInput formControlName="email"  type="email" placeholder="Email" email required>
+          <mat-error *ngIf="formErrors.email">
+            {{formErrors.email}}
           </mat-error>
         </mat-form-field>
       </p>
