--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -37,7 +37,7 @@
   </div>
   <div fxFlex fxFlexOffset="20px" class="form-size">
     <h3>Send us your Feedback</h3>
-    <p>{{feedbackForm.value | json }} {{feedbackForm.status}}</p>
+    <!-- <p>{{feedbackForm.value | json }} {{feedbackForm.status}}</p> -->
     <form nonvalidate [formGroup]="feedbackForm" #fform="ngForm" (ngSubmit)="onSubmit()">
       <p>
         <mat-form-field class="half-width">
