--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,14 +12,18 @@
       <h3>{{dish.name | uppercase}}</h3>
     </mat-card-title>
   </mat-card-header>
-  <img mat-card-image src={{dish.image}} alt={{dish.name}}>
+  <img mat-card-image src="{{BaseURL + dish.image}}" alt={{dish.name}}>
   <mat-card-content>
     <p>{{dish.description}}
     </p>
   </mat-card-content>
 </mat-card>
-<div fxFlex [hidden]="dish">
+<div fxFlex [hidden]="dish || dishErrMess">
   <mat-spinner></mat-spinner><h4>Loading... Please Wait</h4>
+</div>
+<div fxFlex *ngIf="dishErrMess">
+  <h2>Error</h2>
+  <h4>{{dishErrMess}}</h4>
 </div>
 
 <mat-card *ngIf="promotion" fxFlex>
@@ -29,14 +33,18 @@
       <h3>{{promotion.name | uppercase}}</h3>
     </mat-card-title>
   </mat-card-header>
-  <img mat-card-image src={{promotion.image}} alt={{promotion.name}}>
+  <img mat-card-image src="{{BaseURL + promotion.image}}" alt={{promotion.name}}>
   <mat-card-content>
     <p>{{promotion.description}}
     </p>
   </mat-card-content>
 </mat-card>
-<div fxFlex [hidden]="promotion">
+<div fxFlex [hidden]="promotion || promotionErrMess">
   <mat-spinner></mat-spinner><h4>Loading... Please Wait</h4>
+</div>
+<div fxFlex *ngIf="promotionErrMess">
+  <h2>Error</h2>
+  <h4>{{promotionErrMess}}</h4>
 </div>
 
 <mat-card *ngIf="leader" fxFlex>
@@ -46,7 +54,7 @@
       <h3>{{leader.name | uppercase}}</h3>
     </mat-card-title>
   </mat-card-header>
-  <img mat-card-image src={{leader.image}} alt={{leader.name}}>
+  <img mat-card-image src="{{BaseURL + leader.image}}" alt={{leader.name}}>
   <mat-card-content>
     <span>{{leader.designation}}</span>
     <br>
@@ -54,8 +62,14 @@
     </p>
   </mat-card-content>
 </mat-card>
-<div fxFlex [hidden]="leader">
+<div fxFlex [hidden]="leader || leaderErrMess">
   <mat-spinner></mat-spinner><h4>Loading... Please Wait</h4>
 </div>
+<div fxFlex *ngIf="leaderErrMess">
+  <h2>Error</h2>
+  <h4>{{leaderErrMess}}</h4>
+</div>
+
+
 
 </div>
