--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -57,7 +57,7 @@
   <div fxFlex>
     <h2>Corporate Leadership</h2>
     <div *ngIf="leaders">
-      <mat-list *ngFor="let leader of leaders">
+      <mat-list *ngFor="let leader of leaders" [@expand]>
         <img fxFlex matListItemAvatar height="45px" src="{{BaseURL + leader.image}}" alt={{leader.name}}>
         <mat-list-item fxFlex matListItemLine>
           <span matLine>{{leader.name}} {{leader.abbr}}</span>
